--- a/Views/Task/Task.cshtml
+++ b/Views/Task/Task.cshtml
@@ -1,38 +1,32 @@
-﻿@model TModel
-
-@{
+﻿@{
     ViewBag.Title = "Your Tasks";
     Layout = "_Layout";
 }
 
 <h2>title</h2>
 
-@if(Model.Tasks.Count == 0)
+@if (Model.Count == 0)
 {
-    <div class="alert alert-info" role="alert">No Tasks Found!</div>
+    <h2>MODEL IS NULL</h2>
 }
-else
-{
-    <table class="table table-striped">
+<table class="table table-striped">
         <thead class="thead-dark">
         <tr>
             <th scope="col">Id</th>
-            <th scope="col">IsDone</th>
+            <th scope="col">Task Is Complete</th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">Deadline</th>
         </tr>
         </thead>
-        @foreach(var task in Model.Tasks)
+        @foreach(var task in Model)
         {
             <tr>
                 <td>@task.Id</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>@task.IsDone</td>
+                <td>@task.Name</td>
+                <td>@task.Description</td>
+                <td>@task.Deadline</td>
             </tr>
-
         }
     </table>
-}
