--- a/Views/Task/Index.cshtml
+++ b/Views/Task/Index.cshtml
@@ -5,35 +5,38 @@
 
 <h2>title</h2>
 
-@if (Model.Count == 0)
+@if (Model == null)
 {
     <h2>MODEL IS NULL</h2>
 }
-<a asp-action="Create">Add new task</a>
-<table class="table table-striped">
-        <thead class="thead-dark">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Task Is Completed</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Deadline</th>
-            <th scope="col">Options</th>
-        </tr>
-        </thead>
-        @foreach(var task in Model)
-        {
+else
+{
+    <a asp-action="Create">Add new task</a>
+    <table class="table table-striped">
+            <thead class="thead-dark">
             <tr>
-                <td>@(Model.IndexOf(task) + 1)</td>
-                <td>@task.IsDone</td>
-                <td>@task.Name</td>
-                <td>@task.Description</td>
-                <td>@task.Deadline</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@task.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@task.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@task.Id">Delete</a>
-                </td>
+                <th scope="col">Id</th>
+                <th scope="col">Task Completed</th>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Deadline</th>
+                <th scope="col">Options</th>
             </tr>
-        }
-    </table>
+            </thead>
+            @foreach(var task in Model)
+            {
+                <tr>
+                    <td>@(Model.IndexOf(task) + 1)</td>
+                    <td>@task.IsDone</td>
+                    <td>@task.Name</td>
+                    <td>@task.Description</td>
+                    <td>@task.Deadline</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@task.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@task.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@task.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </table>
+}
