--- a/Views/Task/Create.cshtml
+++ b/Views/Task/Create.cshtml
@@ -1,6 +1,5 @@
 ﻿@model ToDo.Models.Entities.ATask
 
-
 @{
     ViewBag.Title = "Add New Task";
     Layout = "_Layout";
@@ -13,6 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <input type="hidden" asp-for="Id" value="@Model.TaskList.Id">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -44,32 +44,3 @@
 <div>
     <a asp-action="Index">Back to your tasks</a>
 </div>
-
-@*<h1>New Task</h1>
-<p class="text-danger">@ViewData["ErrorMessage"]</p>
-<h3>Add a new task.</h3>
-<div>
-    <hr>
-    <form asp-action="Create">
-        <div class="form-group row">
-            <label for="name" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Name) </label>
-            <input type="text" id="name">
-        </div>
-        <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Description) </label>
-            <input type="text" id="description">
-        </div>
-        <div class="form-group row">
-            <label for="deadline" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Deadline) </label>
-            <input type="datetime-local" id="deadline">
-        </div>
-        <div class="form-group row">
-            <input type="checkbox" id="isDone" >
-            <label for="isDone" class="col-sm-2 col-form-label"><small>Is the task already completed?</small> </label>
-        </div>
-        <hr>
-        <input type="submit" value="Add Task" class="btn btn-primary">  | 
-        <a asp-action="Index">Back to your tasks</a>
-    </form>
-
-</div>*@
