--- a/Views/Task/Delete.cshtml
+++ b/Views/Task/Delete.cshtml
@@ -31,9 +31,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" asp-route-listId="@Model.TaskList.Id">
         <input type="hidden" asp-for="Id">
         <input type="submit" value="Delete" class="btn btn-danger"> |
-        <a asp-action="Index">Back to your tasks</a>
+        <a asp-action="Index" asp-route-id="@Model.TaskList.Id">Back to your tasks</a>
     </form>
 </div>
