--- a/Views/Task/Details.cshtml
+++ b/Views/Task/Details.cshtml
@@ -37,12 +37,9 @@
             @Html.DisplayTextFor(model => model.IsDone)
         </dd>
     </dl>
+    
 <div>
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id">
-        <input type="submit" value="Delete" class="btn btn-danger">
-        @Html.ActionLink("Edit", "Edit","Task", new { id =  Model.Id }, new { @class = "btn btn-primary" }) |
-        <a asp-action="Index">Back to your tasks</a>
-    </form>
-
+    @Html.ActionLink("Delete", "Delete", "Task", new { id = Model.Id, listId = Model.TaskList.Id }, new { @class = "btn btn-danger"}) |
+    @Html.ActionLink("Edit", "Edit","Task", new { id =  Model.Id, listId = Model.TaskList.Id }, new { @class = "btn btn-primary" }) |
+    <a asp-action="Index" asp-route-id="@Model.TaskList.Id">Back to your tasks</a>
 </div>
