--- a/Views/Task/Edit.cshtml
+++ b/Views/Task/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr >
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-route-listId="@Model.TaskList.Id">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id">
             <div class="form-group">
@@ -42,6 +42,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to your Tasks</a>
+    <a asp-action="Index" asp-route-id="@Model.TaskList.Id">Back to your Tasks</a>
 </div>
 
