--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,9 +14,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="nav-style navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ToDo</a>
+                <a class="title" asp-area="" asp-controller="Home" asp-action="Index">To Do...</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,30 +24,27 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-itm" asp-area="" asp-controller="TaskList" asp-action="Index">Lists</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-itm" asp-area="" asp-controller="Label" asp-action="Index">Labels</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TaskList" asp-action="Index">TaskList</a>
-                        </li>
-                        @if(User?.Identity != null && User.Identity.IsAuthenticated )
+                        @if (User?.Identity != null && User.Identity.IsAuthenticated)
                         {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
-                        </li>
-                        <li class="nav-item">
-                            <p class="nav-link text-dark">You're logged in as @User.Identity.Name</p>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-itm" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-itm" asp-area="" asp-controller="Home" asp-action="Index">You're logged in as @User.Identity.Name</a>
+                            </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Login">Login</a>
+                                <a class="nav-itm" asp-area="" asp-controller="Users" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Register">Register</a>
+                                <a class="nav-itm" asp-area="" asp-controller="Users" asp-action="Register">Register</a>
                             </li>
                         }
                     </ul>
@@ -61,7 +58,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="nav-style border-top footer text-muted">
         <div class="container">
             &copy; 2021 - ToDo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
