--- a/Views/Task/Create.cshtml
+++ b/Views/Task/Create.cshtml
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Deadline" class="control-label"></label>
-                <input asp-for="Deadline" class="form-control">
+                <input asp-for="Deadline" value="@DateTime.Today" class="form-control">
                 <span asp-validation-for="Deadline" class="text-danger"></span>
             </div>
             <div class="form-check">
