--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,9 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿:root {
+  --main-color: #221F1C;
+  --text-color: #B7B5B3;
+  --text-color-secondary: #dbd6d5;
+}
+
 
 a.navbar-brand {
   white-space: normal;
@@ -36,10 +40,10 @@ html {
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid #fff;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #fff;
 }
 
 .box-shadow {
@@ -68,4 +72,40 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+/* Styling
+-------------------------------------------------- */
+.nav-style {
+  background-color: var(--main-color);
+}
+
+.title {
+  color: var(--text-color);
+  font-weight: bold;
+  font-size: 30px;
+}
+.title:hover {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.nav-itm {
+  color: var(--text-color);
+  padding: 25px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.nav-itm:hover {
+  color: var(--text-color-secondary);
+  text-decoration: none;
+}
+.cst-btn {
+  height: 20px;
+  width: 20px;
+  margin: 4px;
+}
+.cst-btn:hover {
+  opacity: 0.5;
 }
